# atrium

./: .env.example  .gitignore  .npmrc  .trivyignore  CLAUDE.md  Dockerfile  LICENCE.md  Makefile  PLAN.md  README.md  RELEASING.md  TODO.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml  (+1 more)
backend/: .dockerignore  .test_durations  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_04_26_0001-0001_atrium_init.py  2026_04_26_0002-0002_email_outbox.py  2026_04_26_0003-0003_user_soft_delete.py  2026_04_26_0004-0004_email_verifications.py  2026_04_26_0005-0005_email_template_per_locale.py  2026_04_29_0006-0006_email_outbox_perm.py  2026_04_30_0007-0007_password_reset_fallback_url.py  2026_05_01_0008-0008_add_auth_tokens.py  2026_05_01_0009-0009_users_service_account.py  2026_05_01_0010-0010_service_accounts_perm.py  2026_05_03_0011-0011_auth_session_last_seen.py
backend/app/: db.py  logging.py  main.py  settings.py  static.py  worker.py
backend/app/api/: account_deletion.py  admin_auth_tokens.py  admin_roles.py  admin_users.py  app_config.py  audit.py  auth_tokens.py  email_otp.py  email_outbox.py  email_templates.py  health.py  impersonate.py  invites.py  me_context.py  notifications.py  reminder_rules.py  service_accounts.py  sessions.py  signup.py  totp.py  webauthn.py
backend/app/auth/: backend.py  db.py  manager.py  pat_format.py  pat_hashing.py  pat_middleware.py  principal.py  rbac.py  rbac_seed.py  schemas.py  scope.py  two_factor.py  users.py
backend/app/email/: __init__.py  backend.py  sender.py
backend/app/host_sdk/: __init__.py  alembic.py  db.py  email.py  worker.py
backend/app/jobs/: builtin_handlers.py  runner.py  schedule.py  types.py
backend/app/models/: __init__.py  auth.py  auth_session.py  auth_token.py  email_otp.py  email_outbox.py  email_template.py  email_verification.py  enums.py  mixins.py  ops.py  rbac.py  reminder_rule.py  user_totp.py  webauthn.py
backend/app/schemas/: audit.py  email_outbox.py  email_template.py  notification.py  reminder_rule.py
backend/app/scripts/: __init__.py  seed_admin.py
backend/app/services/: account_deletion.py  app_config.py  audit.py  audit_retention.py  captcha.py  event_hub.py  html_sanitise.py  maintenance.py  notifications.py  password_policy.py  pat_rate_limit.py  rate_limit.py  signup.py  totp.py
backend/tests/: conftest.py  helpers.py  test_healthz.py
backend/tests/api/: test_account_deletion.py  test_admin_auth_tokens.py  test_app_config.py  test_auth_tokens.py  test_captcha.py  test_docs_gating.py  test_email_otp.py  test_email_outbox_admin.py  test_email_templates_per_locale.py  test_i18n_config.py  test_idle_timeout.py  test_impersonation.py  test_invite_flow.py  test_maintenance.py  test_notifications.py  test_password_policy.py  test_pat_audit.py  test_pat_auth.py  test_pat_rate_limit.py  test_pat_rotation.py  test_rbac_admin.py  test_service_accounts.py  test_signup.py  test_totp.py  test_webauthn.py
backend/tests/integration/: test_audit_retention.py  test_email_outbox.py  test_engine_isolation.py  test_host_sdk_alembic.py
backend/tests/unit/: test_atrium_version.py  test_host_bootstrap.py  test_host_sdk_alembic.py  test_host_sdk_db.py  test_host_sdk_worker.py  test_mail_backend.py  test_pat_format.py  test_pat_hashing.py  test_pat_lifetime_caps.py  test_pat_log_redaction.py  test_pat_rate_limit.py  test_pat_scope_intersection.py  test_pats_config_defaults.py  test_rbac_seed.py
(+204 files in other folders)
